--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,9 +11,10 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>Thi site was created by Ayush Sharma. It uses data mapbox.com and climatecell api.</p>
         <img class="portrait" src="/img/me.png">
     </div>
-    
+
     {{>footer}}
 </body>
 
